[package]
name = "frusco"
version = "0.1.0"
authors = ["bobgates <>"]

[dependencies]
three = "*"
nalgebra = "0.12.0"
rust-3d="0.19.0"
cgmath="0.14"

#Conrod and supporting crates
conrod = {version = "0.53", features = ["glium", "winit"] }
conrod_derive = "0.1"
daggy = "0.5.0"
fnv = "1.0"
num = "0.1.30"
pistoncore-input = "0.18.0"
rusttype = "0.2.0"
find_folder = "0.3.0"
rand = "0.3.13"
winit = "0.5.9"
glium = "0.16.0"
image = "0.13.0"
petgraph = "*"

